@@ -12,8 +12,6 @@ FreeIPMI FAQ/documentation
 FreeIPMI general
 ----------------
 - use switch instead of if/else if to improve performance (***)
-  - ipmipower, lotsoplaces
-  - libipmiconsole
   - probably libfreeipmi tons of places
   - audit
 - oem extensions
